# ProjectKeystone

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .dockerignore  .editorconfig  .env  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  ARCHITECTURE_REVIEW_FIXES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTINUATION_PROMPT.md  CONTRIBUTING.md  DISTRIBUTED_GRPC_TESTS_SUMMARY.md  DOCKER_TESTING.md  Dockerfile  FIXME.md  IMPLEMENTATION_SUMMARY.md  JUSTFILE_IMPLEMENTATION_PROMPT.md  LICENSE  MIGRATION_C2_C3.md  Makefile  PHASE_8_FINAL_SUMMARY.md  PHASE_8_MADE_OPTIONAL.md  PR_DESCRIPTION.md  README.md  SECURITY.md  TASK_CANCELLATION_IMPLEMENTATION.md  TODO_ARCHITECTURE_P0.md  conanfile.py  docker-compose-distributed.yaml  docker-compose.yml  justfile  mypy.ini  pixi.toml  pyproject.toml  (+4 more)
.claude/agents/: agentic-workflows-orchestrator.md  algorithm-review-specialist.md  architecture-design.md  architecture-review-specialist.md  blog-writer-specialist.md  chief-architect.md  cicd-orchestrator.md  code-review-orchestrator.md  data-engineering-review-specialist.md  dependency-review-specialist.md  documentation-engineer.md  documentation-review-specialist.md  documentation-specialist.md  foundation-orchestrator.md  implementation-engineer.md  implementation-review-specialist.md  implementation-specialist.md  integration-design.md  junior-documentation-engineer.md  junior-implementation-engineer.md  junior-test-engineer.md  mojo-language-review-specialist.md  paper-review-specialist.md  papers-orchestrator.md  performance-engineer.md  performance-review-specialist.md  performance-specialist.md  research-review-specialist.md  safety-review-specialist.md  security-design.md  security-review-specialist.md  security-specialist.md  senior-implementation-engineer.md  shared-library-orchestrator.md  test-engineer.md  test-review-specialist.md  test-specialist.md  tooling-orchestrator.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  build-and-test.yml  build-validation.yml  ci.yml  dependency-audit.yml  docker-tests.yml  installation-verification.yml  integration-tests.yml  pre-commit.yml  profiling-weekly.yml  python-ci.yml  quality.yml  sanitizers.yml  security-scan.yml  unit-tests.yml
TEST_REPORT/: README.md
benchmarks/: README.md  distributed_work_stealing.cpp  hierarchy_performance.cpp  message_bus_performance.cpp  message_pool_performance.cpp  profile_allocations.cpp  registry_performance.cpp  resilience_performance.cpp  scheduler_backoff_benchmark.cpp  string_allocation_profiling.cpp
cmake/: KeystoneConfig.cmake.in  KeystoneConfigVersion.cmake.in
docs/: CICD_COVERAGE.md  CICD_QUALITY_GATES.md  DOCKER_TESTING.md  GLOSSARY.md  HEALTH_CHECKS.md  INTERFACE_SEGREGATION_MIGRATION.md  KUBERNETES_DEPLOYMENT.md  LOAD_TESTING.md  MESSAGE_PROTOCOL_EXTENSIONS.md  METRICS_SECURITY.md  MONITORING.md  NETWORK_PROTOCOL.md  PACKAGING.md  PHASE_8_COMPLETE.md  PHASE_8_E2E_TESTS.md  PHASE_8_FINAL_STATUS.md  PHASE_8_IMPLEMENTATION_SUMMARY.md  PHASE_8_OPTIONAL_BUILD.md  PHASE_8_PROGRESS.md  PRODUCTION.md  README.md  YAML_SPECIFICATION.md
docs/phases/: phase-8-completion-summary.md  phase-A-D-completion.md
docs/plan/: ASYNC_WORK_STEALING_ARCHITECTURE.md  FOUR_LAYER_ARCHITECTURE.md  MIGRATION_ARCHITECTURE_C2_C3.md  PHASE_10_PLAN.md  PHASE_4_PLAN.md  PHASE_5_COMPLETE.md  PHASE_5_PLAN.md  PHASE_6_PLAN.md  PHASE_7_PLAN.md  PHASE_8_PLAN.md  PHASE_9_2-5_COMPLETE.md  PHASE_9_COVERAGE_BASELINE.md  PHASE_9_PLAN.md  PHASE_A_SUMMARY.md  PHASE_D_PLAN.md  README.md  SIMULATION_ARCHITECTURE.md  TDD_APPROACH.md  TDD_FOUR_LAYER_ROADMAP.md  TWO_AGENT_ARCHITECTURE.md  WORK_STEALING_MIGRATION_PLAN.md  architecture.md  build-system.md  error-handling.md  modules.md  phases.md  risks.md  testing-strategy.md
docs/profiling/: P2-06-string-allocation-analysis.md
docs/runbooks/: README.md  high-error-rate.md  hmas-pods-down.md
examples/multi_process_agents/: CMakeLists.txt  DEMO_RESULTS.md  QUICK_START.md  README.md
examples/multi_process_agents/include/: data_structures.hpp  queue_manager.hpp  utils.hpp
examples/multi_process_agents/scripts/: launch_system.sh  run_demo.sh  sample_pr.json
examples/multi_process_agents/src/: process1_chief.cpp  process2_component_lead.cpp  process3_module_lead.cpp  process4_task_agent.cpp  queue_manager.cpp
examples/workflow-examples/: CMakeLists.txt  CODE_REVIEW_RESPONSE.md  README.md
examples/workflow-examples/01-thread-based/: 2layer_example.cpp  3layer_example.cpp  4layer_example.cpp  README.md
examples/workflow-examples/02-ipc-based/: 2layer_example.cpp  3layer_example.cpp  4layer_example.cpp  README.md
examples/workflow-examples/03-network-based/: 2layer_example.cpp  3layer_example.cpp  4layer_example.cpp  README.md
fuzz/: README.md  fuzz_message_bus_routing.cpp  fuzz_message_serialization.cpp  fuzz_retry_policy.cpp  fuzz_work_stealing.cpp
grafana/dashboards/: agent-details.json  hmas-overview.json  logs-dashboard.json  system-health.json
helm/projectkeystone/: Chart.yaml  README.md  values.yaml
include/agents/: agent_base.hpp  agent_core.hpp  async_agent.hpp  (+16 more)
k8s/: alertmanager.yaml  configmap.yaml  deployment.yaml  grafana-dashboards-configmap.yaml  grafana.yaml  loki.yaml  metrics-security.yaml  namespace.yaml  networkpolicy.yaml  prometheus-alerts.yaml  prometheus.yaml  promtail.yaml  rbac.yaml  secrets-example.yaml  secrets.yaml  service.yaml  servicemonitor.yaml
monitoring/: prometheus.yml
proto/: common.proto  hmas_coordinator.proto  service_registry.proto
schemas/: hierarchical_task.yaml
scripts/: README.md  create_phase_issues.sh  file_code_review_issues.sh  generate_coverage.sh  hmas-server.sh  run_benchmarks.sh  run_static_analysis.sh  setup-env.sh  test_docker.sh  verify_install.sh
src/: message.py
tests/: conftest.py  helpers.py  test_config.py  test_daemon.py  test_dag_walker.py  test_health.py  test_maestro_client.py  test_nats_listener.py  test_task_claimer.py
(+196 files in other folders)
